# fs_ui

./: Cargo.toml  index.html  styles.css
src/: app.rs  components.rs  main.rs  template.rs  upload.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
