[package]
name = "fs_ui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.77", features = ["HtmlInputElement", "FileList", "File"]}
serde_json = "1.0.140"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
base64 = "0.22.1"
csv = "1.3.1"

[workspace]
members = ["src-tauri"]
